# imhumane-rs

./: .gitignore  Cargo.toml  README.md  config.example.env  flake.nix  imhumane-rs.code-workspace
src/: cli.rs  config.rs  lib.rs  main.rs
src/html/: challenge.component.html  challenge.js  mod.rs
src/http/: constants.rs  error.rs  mod.rs  router.rs
src/imhumane/: challenge.rs  error.rs  locked_file.rs  mod.rs  service.rs
src/service/: challenge.rs  collection.rs  config.rs  mod.rs  service.rs
